añadidos modulos d jugadas y estadisticas

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-	<a style="color: azure;" >Euromillones</a>
+	<a style="color: azure;" [routerLink]="['/']">Euromillones</a>
 	<div class="fill"></div>
 	<button mat-icon-button [matMenuTriggerFor]="menu">
 		<mat-icon>menu</mat-icon> <!--este icono more_vert viene de la librería de google material-icon-->
