generado componente de estadisticas y solventado el problema de la carga lazy

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,8 @@
                 <mat-card-actions align="end">
                     <button mat-button>Like</button>
                     <button mat-button>SHARE</button>
-                    <a mat-button color="accent" [routerLink]="['/jugadas']">view</a>
+                    <a mat-button color="accent" [routerLink]="['/jugadas']">jugadas</a>
+                    <a mat-button color="accent" [routerLink]="['/estadisticas']">estadisticas</a>
                 </mat-card-actions>
             </mat-card>
         </div>
