--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-	<a style="color: azure;" [routerLink]="['/']">Euromillones</a>
+	
+	<mat-icon>euro_symbol</mat-icon>
+	<a style="color: azure;" [routerLink]="['/']">uromillones</a>
 	<div class="fill"></div>
 	<button mat-icon-button [matMenuTriggerFor]="menu">
 		<mat-icon>menu</mat-icon> <!--este icono more_vert viene de la librería de google material-icon-->
@@ -20,4 +22,6 @@
 		<mat-icon>contacts</mat-icon>
 		<span>Contact</span>
 	</button>
+		
+		
 </mat-menu>
