--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,23 +2,20 @@
     <div class="row">
         <div class="col">
             <mat-card>
-                <mat-card-title>Actions Buttons</mat-card-title>
-                <mat-card-subtitle>Start</mat-card-subtitle>
-                <mat-card-actions>
-                    <button mat-button>LIKE</button>
-                    <button mat-button>SHARE</button>
-                </mat-card-actions>
+                <mat-card-title>Estadisticas</mat-card-title>
+               <img mat-card-image src="/assets/estadisticas.jpg">
+                <a mat-button color="accent" [routerLink]="['/estadisticas']">ver</a>
             </mat-card>
         </div>
         <div class="col">
             <mat-card>
-                <mat-card-title>Actions Buttons</mat-card-title>
-                <mat-card-subtitle>End</mat-card-subtitle>
-                <mat-card-actions align="end">
-                    <button mat-button>Like</button>
-                    <button mat-button>SHARE</button>
-                    <a mat-button color="accent" [routerLink]="['/jugadas']">jugadas</a>
-                    <a mat-button color="accent" [routerLink]="['/estadisticas']">estadisticas</a>
+                <mat-card-title>Jugadas</mat-card-title>
+                <img mat-card-image src="/assets/euroMIllones.jpg">
+                
+                <mat-card-actions align="start">
+                    
+                    <a mat-button color="accent" [routerLink]="['/jugadas']">ir</a>
+                    
                 </mat-card-actions>
             </mat-card>
         </div>
