--- a/src/app/estadisticas/estadisticas.component.html
+++ b/src/app/estadisticas/estadisticas.component.html
@@ -1,1 +1,33 @@
-<p>estadisticas works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <form #f="ngForm">
+
+                <mat-form-field>
+                    <mat-label>Fecha Desde</mat-label>
+                    <input matInput type="date" placeholder="Fecha desde" name="fechaDesde" [formControl]="fechaDesde"
+                         />
+                </mat-form-field>
+                <mat-form-field>
+                    <input matInput type="date" placeholder="Fecha hasta" name="fechaHasta" [formControl]="fechaHasta"/>
+                </mat-form-field>
+                <mat-form-field *ngIf="tipoEstadisticaSeleccionada=='Secuencias'">
+                    <input matInput type="number" placeholder="Longitud Secuencia" name="longitudSecuencia"
+                        [formControl]="longitudSecuencia"  />
+                </mat-form-field>
+
+                <mat-form-field>
+                    <mat-select placeholder="tipoEstadistica" name="tipoEstadistica" [(ngModel)]="tipoEstadisticaSeleccionada"  required>
+                        <mat-option *ngFor="let tipo of tipoEstadistica" [value]="tipo">{{tipo}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button mat-raised-button color="accent" type="submit" (click)="obtenerEstadisticas()">
+                    <mat-icon>check</mat-icon>Generar
+                </button>
+
+            </form>
+        </div>
+        
+    </div>
+    
+</div>
