se elimina directiva innecesaria en jugadas form reactive form

--- a/src/app/jugadas/jugadas.component.html
+++ b/src/app/jugadas/jugadas.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-3">
-            <form #f="ngForm">
+            <form >
 
                 <mat-form-field>
                     <mat-label>Fecha Desde</mat-label>
